@@ -1,3 +1,10 @@
+2004-10-09  Martin Schaffner  <maschaffner@gmx.ch>
+
+	* main/automap.c, main/cntrlcen.c, main/collide.c, main/endlevel.c,
+	main/gamerend.c, main/gameseq.c, main/mission.h, main/titles.c:
+	use new macros PLAYING_BUILTIN_MISSION and EMULATING_D1 for accessing
+	information about the current mission, for easier code refactorisation.
+
 2004-09-30  Martin Schaffner  <maschaffner@gmx.ch>
 
 	* cfile/cfile.c: simplify, reduce number of global vars
